[tool.poetry]
name = "naver-land-crawling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
urllib3 = "^2.2.3"
geopy = "^2.4.1"
fake-useragent = "^1.5.1"
random-user-agent = "^1.0.1"
selenium = "^4.25.0"
chromedrivermanager = "^0.0.1"
webdriver-manager = "^4.0.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
